# deepdive-assist

./: .gitignore  App.tsx  README.md  app.json  package-lock.json  package.json
backend/: deepdive.db  pyproject.toml  test_api_endpoint.py  test_media_type.py  update_enum.sql
backend/app/: main.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: __init__.py  deep_dive.py  media.py  notes.py
backend/app/db/: database.py  init_db.py  supabase_client.py
backend/app/models/: __init__.py  deep_dive.py  genre.py  media.py  note.py
backend/app/repositories/: __init__.py  base.py  deep_dive_repository.py  media_repository.py  note_repository.py
backend/app/schemas/: __init__.py  deep_dive.py  media.py  note.py
backend/app/services/: ai_service.py
backend/app/tests/: test_supabase_connection.py
src/components/: Rating.tsx
src/config/: api.ts
src/hooks/: useDeepDiveData.ts  useMediaData.ts  useNotesData.ts
src/navigation/: index.tsx
src/screens/: HomeScreen.tsx  MediaDetailScreen.tsx
src/screens/Capture/: CaptureScreen.tsx
src/screens/DeepDive/: DeepDiveScreen.tsx
src/screens/Notes/: NotesScreen.tsx
src/services/: api-client.ts  deep-dive-service.ts  media-service.ts  notes-service.ts
src/types/: declarations.d.ts  index.ts
